--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,20 @@
     </dependency>
 
     <dependency>
+  <groupId>org.apache.logging.log4j</groupId>
+  <artifactId>log4j-core</artifactId>
+  <version>2.14.1</version> <!-- CVE-2021-44228 -->
+</dependency>
+
+<dependency>
+  <groupId>commons-collections</groupId>
+  <artifactId>commons-collections</artifactId>
+  <version>3.2.1</version>
+</dependency>
+
+
+
+    <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
     </dependency>
